# mole_form

./: .gitignore  api.py  app.py  appv2.py  constants.py  default.json  github_push.py  nixpacks.toml  proxy.py  pyproject.toml  railway.json  railway.toml  requirements.txt  setup.sh  shami.json  start.sh  survey.py  test.py
pages/: survey.py
schema/: ar.json  bib.json  en.json  fr.json  jp.json  model.json  multi.json  ru.json  s2orc.json  tool.json
