[project]
name = "masader-form"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "gspread>=6.2.1",
    "oauth2client>=4.1.3",
    "pygithub>=2.8.1",
    "streamlit>=1.50.0",
    "streamlit-pdf-viewer>=0.0.26",
    "streamlit-tags>=1.2.8",
]
