[project]
name = "masader-form"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv>=0.9.9",
    "fastapi>=0.115.0",
    "gitpython>=3.1.45",
    "httpx>=0.28.0",
    "pygithub>=2.8.1",
    "requests>=2.32.0",
    "streamlit>=1.50.0",
    "streamlit-pdf-viewer>=0.0.20",
    "streamlit-tags>=1.2.8",
    "uvicorn>=0.34.0",
    "websockets>=13.0",
]
